# sdts-fork

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  README.md  README.txt  TODO  aclocal.m4  autogen.sh  configure  configure.in  install_manifest.txt
cmake/modules/: MacroOutOfSourceBuild.cmake
contrib/: CMakeLists.txt  Makefile.in
contrib/mksdts/: CMakeLists.txt  Makefile.in  README  lexer.ll  parser.yy
contrib/mkstat/: CMakeLists.txt  Makefile.in  emit.cpp  emit.h  filename.cpp  filename.h  mkstat.cpp
contrib/pr8211/: CMakeLists.txt  Makefile.in  pr8211.cpp
contrib/prsdts/: CMakeLists.txt  Makefile.in  prsdts.cpp
contrib/sdtsdem2asc/: CMakeLists.txt  sdtsdem2asc.1  sdtsdem2asc.cc
contrib/sdtsdem2asc/inc/: LokiExport.h  NullType.h  SafeFormat.h  Sequence.h  TypeManip.h  TypeTraits.h  Typelist.h  TypelistMacros.h  iso8211.h  sdts_al.h
contrib/sdtsdem2asc/libsrc/: SafeFormat.cc
contrib/sdtsdem2asc/tests/3818122.DEM/: 3814CATD.DDF  3814DQAA.DDF  3814DQLC.DDF  3814DQPA.DDF  3814IDEN.DDF  3814LDEF.DDF  3814STAT.DDF  3814XREF.DDF
contrib/sdtsdem2asc/tests/3818122.dem/: 3814cats.ddf  3814dddf.ddf  3814ddom.ddf  3814ddsh.ddf  3814dqcg.ddf  3814dqhl.ddf  3814iref.ddf  3814rsdf.ddf  3814spdm.ddf  3818122.dem.sdts.txt
contrib/sdtsdem2xyz/: CMakeLists.txt  Makefile.in  sdtsdem2xyz.cpp
contrib/tomksdts/: CMakeLists.txt  Makefile.in  convert.cpp  tomksdts.cpp
doc/: Makefile.in  sdts++.info
sdts++/: .gitignore  CMakeLists.txt  Makefile.in  README.txt  cmake_install.cmake  sdts-config.h.in
sdts++/builder/: sb_Accessor.cpp  sb_Accessor.h  sb_At.cpp  sb_At.h  sb_Catd.cpp  sb_Catd.h  sb_Cats.cpp  sb_Cats.h  sb_Cell.cpp  sb_Cell.h  sb_Clrx.cpp  sb_Clrx.h  sb_Comp.cpp  sb_Comp.h  sb_Dddf.cpp  sb_Dddf.h  sb_Ddom.cpp  sb_Ddom.h  sb_Ddsh.cpp  sb_Ddsh.h  sb_Dq.cpp  sb_Dq.h  sb_ForeignID.cpp  sb_ForeignID.h  sb_Iden.cpp  sb_Iden.h  sb_Iref.cpp  sb_Iref.h  sb_Ldef.cpp  sb_Ldef.h  sb_Line.cpp  sb_Line.h  sb_Module.cpp  sb_Module.h  sb_Pnts.cpp  sb_Pnts.h  sb_Poly.cpp  sb_Poly.h  sb_Ring.cpp  sb_Ring.h  (+11 more)
sdts++/container/: sc_Field.cpp  sc_Field.h  sc_Module.h  sc_MultiTypeValue.cpp  sc_MultiTypeValue.h  sc_Record.h  sc_Subfield.cpp  sc_Subfield.h
sdts++/io/: .gitignore  FormatLexer.ll  FormatParser.c  FormatParser.yy  sio_8211Converter.cpp  sio_8211Converter.h  sio_8211DDR.cpp  sio_8211DDR.h  sio_8211DDRField.cpp  sio_8211DDRField.h  sio_8211DDRLeader.cpp  sio_8211DDRLeader.h  sio_8211DR.cpp  sio_8211DR.h  sio_8211DRLeader.cpp  sio_8211DRLeader.h  sio_8211DirEntry.cpp  sio_8211DirEntry.h  sio_8211Directory.cpp  sio_8211Directory.h  sio_8211Field.cpp  sio_8211Field.h  sio_8211FieldArea.cpp  sio_8211FieldArea.h  sio_8211FieldFormat.cpp  sio_8211FieldFormat.h  sio_8211Leader.cpp  sio_8211Leader.h  sio_8211Record.cpp  sio_8211Record.h  sio_8211SubfieldFormat.cpp  sio_8211SubfieldFormat.h  sio_8211Utils.cpp  sio_Buffer.cpp  sio_Buffer.h  sio_Converter.cpp  sio_Converter.h  sio_ConverterFactory.cpp  sio_ConverterFactory.h  sio_Error.cpp  (+7 more)
sdts++/logical/: sl_Chain.cpp  sl_Chain.h  sl_Node.cpp  sl_Node.h  sl_Object.h  sl_Point.cpp  sl_Point.h  sl_Polygon.cpp  sl_Polygon.h  sl_Ring.h  sl_String.cpp  sl_String.h
sdts++/sysutils/: CMakeLists.txt  t_basename.cpp  t_dirname.cpp  t_stringutils.cpp
sysutils/: .gitignore  CMakeLists.txt  fileutils.cpp  fileutils.h  stringutils.cpp  stringutils.h  t_basename.cpp  t_dirname.cpp  t_stringutils.cpp
tests/: CMakeLists.txt  Makefile.in  container_t.cpp  sb_Directory_t.cpp  sb_ForeignID_t.cpp  sb_Spatial_t.cpp  sb_arc_t.cpp  sb_catd_t.cpp  sb_cats_t.cpp  sb_comp_t.cpp  sb_dddf_t.cpp  sb_ddom_t.cpp  sb_ddsh_t.cpp  sb_iden_t.cpp  sb_iref_t.cpp  sb_utils_t.cpp  sc_Field_t.cpp  sc_MultiTypeValue_t.cpp  sc_Subfield_t.cpp  sio_8211DDRLeader_t.cpp  sio_8211DirEntry_t.cpp  sio_8211Field_t.cpp  sio_ConverterFactory_t.cpp  sio_ReadWrite_t.cpp  sio_Reader_t.cpp  sio_Writer_t.cpp
